@@ -1957,7 +1957,7 @@ class NameChecker(_BasicChecker):
         # Check argument names
         args = node.args.args
         if args is not None:
-            self._recursive_check_names(args, node)
+            self._recursive_check_names(args)
 
     visit_asyncfunctiondef = visit_functiondef
 
@@ -2008,13 +2008,13 @@ class NameChecker(_BasicChecker):
                 else:
                     self._check_name("class_attribute", node.name, node)
 
-    def _recursive_check_names(self, args, node):
+    def _recursive_check_names(self, args):
         """check names in a possibly recursive list <arg>"""
         for arg in args:
             if isinstance(arg, nodes.AssignName):
-                self._check_name("argument", arg.name, node)
+                self._check_name("argument", arg.name, arg)
             else:
-                self._recursive_check_names(arg.elts, node)
+                self._recursive_check_names(arg.elts)
 
     def _find_name_group(self, node_type):
         return self._name_group.get(node_type, node_type)
